trying to fix the spacing

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -2,7 +2,7 @@
 
 #flex-section1 ul {
 	display: flex;
-	padding: 0;
+	padding: 10px;
 	margin: 0;
 	align-items: center;
 	list-style: none;
